# roi-analysis

./: .gitignore  README.md  aaa.py  analysis.ipynb  environment.yml  idk.py  main.py  nb.ipynb  nb.py  normalization.ipynb  pyproject.toml  roi_analysis.ipynb
roi_analyser/: README.md  __init__.py  processing.py
scripts/: start_jupyter.bat  start_jupyter.ps1  start_jupyter.sh
src/: processing.py
tests/: test_import.py
