[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roi-analyser"
version = "0.2.1"
description = "A library for detecting cell clusters from DAPI microscopy images"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jakub Povinec", email = "jakub.povinec@gmail.com"},
]
keywords = ["microscopy", "image-analysis", "roi", "opencv", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-image>=0.25.2",
    "scipy>=1.11.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "notebook>=7.4.0",
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/kuko6/roi-analyser"
Repository = "https://github.com/kuko6/roi-analyser.git"
Issues = "https://github.com/kuko6/roi-analyser/issues"

[tool.hatchling.build.targets.wheel]
packages = ["roi_analyser"]

